# arborist

./: .env.example  .gitattributes  .gitignore  README.md  config.example.yaml  discord-asset-archive-bot-legal-analysis.md  pyproject.toml
bot/: archiver.py  attachment_handler.py  config.py  discord_markdown.py  git_manager.py  main.py  markdown_renderer.py
bot/templates/: attachment.html.j2  base.html.j2  channel.html.j2  embed.html.j2  home.html.j2  legal.html.j2  message.html.j2  message.md.j2  message_body.md.j2  static_page.html.j2  tag.html.j2  thread.html.j2
site/: pygments.css  styles.css
tests/: conftest.py  fake_data.py  make_fake_site.py  test_archiver.py  test_attachment_handler.py  test_discord_markdown.py  test_git_manager.py  test_main.py  test_markdown_renderer.py  test_system.py  test_visual.py
