[project]
name = "arborist"
version = "0.1.0"
description = "Discord forum archiver — mirrors forum posts to a GitHub Pages static site"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "aiohttp>=3.9",
    "gitpython>=3.1",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]
