[project]
name = "arborist"
version = "0.1.0"
description = "Discord forum archiver — mirrors forum posts to a GitHub Pages static site"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "aiohttp>=3.9",
    "gitpython>=3.1",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "mistune>=3",
    "pygments>=2.18",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "playwright: browser-based visual tests",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest-playwright>=0.8.0",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
]
